# MAS

./: .env.example  .gitignore  ADK_RAG_AGENT_BUILD_GIUDE.md  CLAUDE.md  GCP_CLOUD_FUNCTION_RAG_INGESTION_PLAN.md  GCP_RESOURCES_INVENTORY.md  MAS_ARCHITECTURE.md  MAS_COMPLETE_ARCHITECTURE.md  MAS_FRONTEND_IMPLEMENTATION_PLAN.md  MAS_FRONTEND_PLAN.md  MAS_QUICK_REFERENCE.md  MAS_VISUAL_DIAGRAM.md  RAG_AGENT_INTEGRATION_PLAN.md  README.md  TRANSFORMATION_PLAN.md  cleanup_test_corpus.py  debug_calculator.py  pyproject.toml  test_agent_adk.py  test_calculator.py  test_deployed_mas.py  test_local.py  test_local_calc.py  test_local_calculator.py  test_local_mas.py  test_mas_calculator.py  test_mas_debug.py  test_mas_hello.py  test_mas_mixed.py  test_mas_non_weather.py  test_mas_simple.py  test_mas_simple_calc.py  test_mas_single.py  test_mas_with_rag.py  test_rag_agent.py  test_rag_direct.py  test_rag_list.py  test_rag_queries.py  test_rag_runner.py  test_rag_simple.py  (+3 more)
cloud_functions/rag_ingestion/: .env.yaml  (+5 more)
deployment/: delete_agent.py  deploy.py
mas-frontend/: ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  docker-compose.yml  setup.sh
mas_system/: agent.py  prompt.py
test_academic_agents/: ACADEMIC_AGENTS_SUMMARY.md  download_test_paper.py  seminal_paper_transformers.md  test_academic_workflow.py  test_complete_workflow.py  test_fully_functional.py  test_pdf_parsing.py
test_documents/: adk_best_practices.md  mas_architecture.md  mas_faq.md
tests/: test_agents.py  test_calculator_subagent.py  test_mas_coordinator.py  test_weather_subagent.py
(+158 files in other folders)
